# Constructor-Telegram-Bots

./: .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  base.webpack.config.js  compose.yaml  demonstration_site.py  demonstration_site_pages.py  django.yml  install.sh  manage.py  mypy.ini  nginx.conf  npm-build.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh  test.py  tsconfig.json  webpack.config.ts
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: backend.yml  django.yml  frontend.yml  main.yml
constructor_telegram_bots/: __init__.py  asgi.py  authentication.py  celery.py  context_processors.py  environment.py  exception_formatter.py  fields.py  global_decorators.py  global_variable.py  gunicorn.py  gunicorn_config.py  manage.py  migrations.py  mixins.py  pagination.py  parsers.py  permissions.py  responses.py  settings.py  telegram_bot.py  urls.py  validators.py  wsgi.py
constructor_telegram_bots/account/: urls.py  views.py
constructor_telegram_bots/authorization/: apps.py  tests.py  views.py
constructor_telegram_bots/constructor/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
constructor_telegram_bots/constructor_telegram_bots/: __init__.py  asgi.py  celery.py  context_processors.py  decorators.py  environment.py  exception_formatter.py  functions.py  gunicorn_config.py  settings.py  tasks.py  tests.py  urls.py  wsgi.py
constructor_telegram_bots/donation/: admin.py  apps.py  context_processors.py  models.py  tests.py  translation.py  urls.py  views.py
constructor_telegram_bots/home/: apps.py  tests.py  urls.py  views.py
constructor_telegram_bots/instruction/: admin.py  apps.py  context_processors.py  models.py  tests.py  translation.py  urls.py  views.py
constructor_telegram_bots/learn_more/: apps.py  urls.py  views.py
constructor_telegram_bots/main/: tests.py  views.py
constructor_telegram_bots/personal_cabinet/: apps.py  tests.py  urls.py  views.py
constructor_telegram_bots/plugin/: admin.py  apps.py  decorators.py  models.py  serializers.py  tests.py  urls.py  views.py
constructor_telegram_bots/privacy_policy/: apps.py  tests.py  urls.py  views.py
constructor_telegram_bots/registration/: urls.py  views.py
constructor_telegram_bots/scripts/: apps.py  constructor_telegram_bot.py  decorators.py  functions.py  start_telegram_bot.py  telegram_bots.py  user_telegram_bot.py
constructor_telegram_bots/team/: admin.py  apps.py  context_processors.py  models.py  tests.py  translation.py  urls.py  views.py
constructor_telegram_bots/telegram_bot/: admin.py  apps.py  context_processors.py  decorators.py  functions.py  managers.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
constructor_telegram_bots/telegram_bot_menu/: apps.py  tests.py  urls.py  views.py
constructor_telegram_bots/telegram_bots/: __init__.py  constructor_telegram_bot.py  custom_aiogram.py  functions.py  tasks.py  user_telegram_bot.py
constructor_telegram_bots/templates/: .html  404.html  alert.html  base.html  base_alert.html  base_error_or_success.html  base_success_or_error.html  footer.html  index.html  main.html  navbar.html
constructor_telegram_bots/updates/: admin.py  apps.py  context_processors.py  decorators.py  models.py  tests.py  translation.py  urls.py  views.py
constructor_telegram_bots/user/: admin.py  apps.py  context_processors.py  managers.py  models.py  tasks.py  tests.py  urls.py  views.py
constructor_telegram_bots/user_plagin/: admin.py  apps.py  models.py  urls.py
constructor_telegram_bots/utils/: admin.py  drf.py  other.py  shortcuts.py
donation/: admin.py  apps.py  models.py  serializers.py  tests.py  translation.py  urls.py  views.py
donation/migrations/: 0001_initial.py  0002_alter_donation_options.py  0002_alter_method_position_alter_section_position.py  0003_alter_method_link.py  0003_donationsection.py  0004_convert_html_to_markdown.py  0004_donationbutton_alter_donation_options_and_more.py  0005_alter_donation_date.py  (+2 more)
donation/templates/: donation.html
exg1o/: global_decorators.py  global_functions.py  global_methods.py  global_variable.py  global_variables.py  manage.py  telegram_bot.py
frontend/: package-lock.json  package.json  tsconfig.json  webpack.config.ts
home/: tests.py  urls.py  views.py
instruction/: admin.py  apps.py  models.py  serializers.py  tests.py  translation.py  urls.py  views.py
languages/: apps.py  serializers.py  tests.py  urls.py  views.py
other/: demonstration_site_pages.py
personal_cabinet/: tests.py  urls.py  views.py
plugin/: admin.py  apps.py  decorators.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
privacy_policy/: admin.py  apps.py  models.py  serializers.py  tests.py  translation.py  urls.py  views.py
scripts/: generate_django_secret_key.py  health-checker.sh  setup.bat  setup.sh
team/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  translation.py  urls.py  views.py
telegram_bot/: admin.py  apps.py  decorators.py  functions.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
telegram_bots/: admin.py  apps.py  base_models.py  base_serializers.py  enums.py  mixins.py  models.py  parsers.py  permissions.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
terms_of_service/: admin.py  apps.py  tests.py  urls.py  views.py
updates/: admin.py  apps.py  decorators.py  models.py  serializers.py  signals.py  tests.py  translation.py  urls.py  views.py
user/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
users/: admin.py  apps.py  authentication.py  backends.py  data.py  enums.py  exceptions.py  models.py  permissions.py  routers.py  serializers.py  tasks.py  tests.py  tokens.py  urls.py  utils.py  views.py
utils/: deep_merge.py  drf.py  filters.py  formats.py  html.py  mixins.py  other.py  shortcuts.py  storage.py
(+1028 files in other folders)
