[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.3.6"
django = "~5.2"
django-filter = "~25"
django-modeltranslation = "~0.19"
djangorestframework = "^3.15.1"
drf-standardized-errors = "^0.13.0"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.1"
redis = "^5.0.3"
psycopg = "^3.1.18"
django-stubs-ext = "~5.2"
yarl = "^1.9.4"
pyjwt = "~2.11"
pillow = "^11.0.0"
django-admin-sortable2 = "~2.3"

[tool.poetry.group.dev.dependencies]
django-silk = "~5"
django-stubs = "~5.2"
djangorestframework-stubs = "^3.15.0"
mypy = "~1.19"
ruff = "~0.15"

[tool.poetry.group.migrations.dependencies]
html2text = "^2024.2.26"

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_subclassing_any = false
warn_unreachable = true
warn_no_return = true
warn_return_any = false

plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "constructor_telegram_bots.settings"

[tool.ruff]
target-version = "py311"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "N",  # pep8-naming
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "T20",  # flake8-print
    "INT",  # flake8-gettext
    "FBT003",  # flake8-boolean-trap: boolean positional value in function call
    "DTZ",  # flake8-datetimez
    "DJ",  # flake8-django
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "LOG",  # flake8-logging
    "G",  # flake8-logging-format
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "FLY",  # flynt
    "PERF",  # Perflint
    "PGH",  # pygrep-hooks
    "TRY",  # tryceratops
]
ignore = [
    "E501",  # line too long, handled by black
    "W191",  # indentation contains tabs
    "DJ001",  # avoid using null=True on string-based fields such as {field_name}
    "RET505",  # unnecessary {branch} after return statement
    "RET506",  # unnecessary {branch} after raise statement
    "RET507",  # unnecessary {branch} after continue statement
    "RET508",  # unnecessary {branch} after break statement
    "TRY003",  # avoid specifying long messages outside the exception class
    "TRY201",  # use raise without specifying exception name
    "TRY300",  # consider moving this statement to an else block
]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "django",
    "django_stubs_ext",
    "rest_framework",
    "third-party",
    "first-party",
    "local-folder",
    "requests",
    "standard-library",
]
from-first = true

[tool.ruff.lint.isort.sections]
django = ["django"]
django_stubs_ext = ["django_stubs_ext"]
rest_framework = ["rest_framework"]
requests = ["requests"]

[tool.ruff.format]
quote-style = "single"
