[project]
name = "constructor-telegram-bots"
version = "4.0.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "celery>=5.6,<5.7",
    "django>=5.2,<5.3",
    "django-filter>=25,<26",
    "django-modeltranslation>=0.19,<0.20",
    "djangorestframework>=3.16,<3.17",
    "drf-standardized-errors>=0.15,<0.16",
    "gunicorn>=25,<26",
    "python-dotenv>=1.2,<1.3",
    "redis>=7,<8",
    "psycopg>=3,<4",
    "django-stubs-ext>=5.2,<5.3",
    "yarl>=1.22,<1.23",
    "pyjwt>=2.11,<2.12",
    "pillow>=12,<13",
    "django-admin-sortable2>=2.3,<2.4",
    "urllib3>=2.6,<2.7",
    "requests>=2.32,<2.33",
]

[dependency-groups]
dev = [
    "django-silk>=5,<6",
    "django-stubs>=5.2,<5.3",
    "djangorestframework-stubs>=3.16,<3.17",
    "mypy>=1.19,<1.20",
    "ruff>=0.15,<0.16",
    "types-requests>=2.32,<2.33",
]
migrations = ["html2text==2024.2.26"]

[tool.uv]
package = false
default-groups = ["dev", "migrations"]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_subclassing_any = false
warn_unreachable = true
warn_no_return = true
warn_return_any = false

plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "constructor_telegram_bots.settings"

[tool.ruff]
target-version = "py311"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "N",  # pep8-naming
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "T20",  # flake8-print
    "INT",  # flake8-gettext
    "FBT003",  # flake8-boolean-trap: boolean positional value in function call
    "DTZ",  # flake8-datetimez
    "DJ",  # flake8-django
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "LOG",  # flake8-logging
    "G",  # flake8-logging-format
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "FLY",  # flynt
    "PERF",  # Perflint
    "PGH",  # pygrep-hooks
    "TRY",  # tryceratops
]
ignore = [
    "E501",  # line too long, handled by black
    "W191",  # indentation contains tabs
    "DJ001",  # avoid using null=True on string-based fields such as {field_name}
    "RET505",  # unnecessary {branch} after return statement
    "RET506",  # unnecessary {branch} after raise statement
    "RET507",  # unnecessary {branch} after continue statement
    "RET508",  # unnecessary {branch} after break statement
    "TRY003",  # avoid specifying long messages outside the exception class
    "TRY201",  # use raise without specifying exception name
    "TRY300",  # consider moving this statement to an else block
]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "django",
    "django_stubs_ext",
    "rest_framework",
    "third-party",
    "first-party",
    "local-folder",
    "requests",
    "standard-library",
]
from-first = true

[tool.ruff.lint.isort.sections]
django = ["django"]
django_stubs_ext = ["django_stubs_ext"]
rest_framework = ["rest_framework"]
requests = ["requests"]

[tool.ruff.format]
quote-style = "single"
